--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
   },
   "homepage": "https://github.com/btroncone/ngrx-store-localstorage#readme",
   "peerDependencies": {
-    "@ngrx/core": "^1.0.0",
-    "rxjs": "^5.0.0-beta.6",
-    "@angular/core": "^2.0.0-rc.5",
-    "@ngrx/store": "^2.0.0"
+    "@ngrx/core": "^1.2.0",
+    "rxjs": "^5.2.0",
+    "@angular/core": "^4.0.1",
+    "@ngrx/store": "^2.2.1"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/compiler-cli": "^0.5.0",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-server": "^2.0.0-rc.5",
-    "@angular/tsc-wrapped": "^0.2.2",
-    "@ngrx/core": "^1.0.0",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/compiler-cli": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-server": "^4.0.1",
+    "@angular/tsc-wrapped": "^4.0.1",
+    "@ngrx/core": "^1.2.0",
     "@types/crypto-js": "^3.1.33",
     "@types/jasmine": "^2.2.31",
     "@types/node": "^6.0.33",
@@ -57,7 +57,7 @@
     "lodash": "^3.10.1",
     "reflect-metadata": "0.1.2",
     "rimraf": "^2.5.2",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.2.0",
     "tslint": "^3.4.0",
     "typescript": "next",
     "typings": "^0.8.1",
