--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "peerDependencies": {
     "@ngrx/core": "^1.0.0",
     "rxjs": "^5.0.0-beta.6",
-    "@angular/core": "^2.0.0-rc.5",
+    "@angular/core": "^2.0.0-rc.5 || ^4.0.0",
     "@ngrx/store": "^2.0.0"
   },
   "devDependencies": {
