--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   "homepage": "https://github.com/btroncone/ngrx-store-localstorage#readme",
   "peerDependencies": {
     "@ngrx/core": "^1.0.0",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "^5.0.1",
     "@angular/core": "^2.0.0-rc.5 || ^4.0.0",
     "@ngrx/store": "^2.0.0"
   },
   "devDependencies": {
     "@angular/common": "^2.0.0-rc.5",
     "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/compiler-cli": "^0.5.0",
+    "@angular/compiler-cli": "^2.0.0",
     "@angular/core": "^2.0.0-rc.5",
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-server": "^2.0.0-rc.5",
-    "@angular/tsc-wrapped": "^0.2.2",
+    "@angular/tsc-wrapped": "^0.5.0",
     "@ngrx/core": "^1.0.0",
     "@types/crypto-js": "^3.1.33",
     "@types/jasmine": "^2.2.31",
@@ -57,11 +57,11 @@
     "lodash": "^3.10.1",
     "reflect-metadata": "0.1.2",
     "rimraf": "^2.5.2",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.1",
     "tslint": "^3.4.0",
-    "typescript": "next",
+    "typescript": "^2.0.0",
     "typings": "^0.8.1",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.7.2"
   },
   "typings": "./dist/index.d.ts"
 }
